[tool.poetry]
name = "re-cli-components"
version = "1.0.0"
description = ""
authors = ["Philipp Gayret <philipp@release-engineers.com>"]
readme = "README.md"
packages = [{ include = "recomponents" }]
license = "SSPL-1.0"

[tool.poetry.dependencies]
python = "^3.12"
textual = "^0.63.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
